--- a/dinner_overview.css
+++ b/dinner_overview.css
@@ -16,6 +16,7 @@
 .dinnerOverviewObject {
 	height: 200px;
 	text-align: right;
+	margin-bottom: 30px;
 }
 
 .priceAtBottom {
@@ -38,7 +39,7 @@
 
 .hiddenThumbnail {
 	width: 170px;
-	height: 170px;
+	height: 200px;
 	display: table-cell;
 	vertical-align: bottom;
 	text-align: left;
