--- a/select_dish.css
+++ b/select_dish.css
@@ -28,3 +28,8 @@
 	height: 90px;
 	font-family: "Helvetica Neue", "Helvetica", "Arial", "sans-serif";
 }
+
+.loading {
+	text-align: center;
+	margin-top: 10px;
+}
